[package]
name = "asn1-codegen-cpp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "C++ source generator for ASN.1 IR"

[dependencies]
asn1-ir = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
asn1-parser = { workspace = true }
