[package]
name = "asn1-viz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "egui-based visualizer for the ASN.1 IR"

[dependencies]
asn1-ir = { workspace = true }
asn1-parser = { workspace = true }
asn1-codegen-java = { workspace = true }
asn1-codegen-cpp = { workspace = true }
dark-light = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = { workspace = true }
walkdir = { workspace = true }
